# PyMICE

./: .gitignore  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  paper.yml  parity-nightly.yml  publish.yml
Commands/: .gitignore  README.md  run_all.sh  run_vignettes.py  setup_venv.sh
Commands/lib/: compliance.py  data.py  parity_docs.py  r_style.py  report.py  tutorial_section.py  v01_narrative.py  v02_narrative.py  v03_narrative.py  v04_narrative.py  v05_narrative.py  v06_narrative.py  viz.py
Commands/vignettes/: v01_ad_hoc_mice.py  v02_convergence_pooling.py  v03_missingness.py  v04_passive.py  v05_multilevel.py  v06_sensitivity.py  v07_ampute.py  v08_futuremice.py
Demonstration/: simulation_study.py
Documentation/: ATTRIBUTION.md  BIBLIOGRAPHY.md  REPRODUCIBILITY.md
Paper/: SUBMISSION_GUIDE.md  paper.bib  paper.md  simulation_study.py
Reference/: README.md
Vignettes/: README.md  extract_vignette_code.py
Vignettes/07_ampute/: vignette_extracted.R
demo/: simulation_study.py
devtools/: README.md  audit_code_display.py  audit_rng_parity.py  audit_vignette_alignment.py  maintain_parity.py  parity_backlog.json  refresh_goldens.py  regenerate_draw_order_goldens.py  regenerate_v05_goldens.py  regenerate_v06_goldens.py  regenerate_v07_goldens.py  repair_vignette_tabs.py  run_all.sh  run_vignettes.py  setup.sh  setup_venv.sh  venv.sh
devtools/lib/: __init__.py  compliance.py  data.py  figure_map.py  golden.py  golden_store.py  help_format.py  parity_backlog.py  parity_docs.py  parity_manifest.py  paths.py  r_style.py  reader_guide.py  report.py  summary_format.py  tutorial_section.py  v01_narrative.py  v02_narrative.py  v03_narrative.py  v04_narrative.py  v05_narrative.py  v06_narrative.py  v07_narrative.py  v08_narrative.py  vignette_blocks.py  vignette_catalog.py  vignette_rng.py
devtools/runners/: __init__.py  v01_ad_hoc_mice.py  v02_convergence_pooling.py  v03_missingness.py  v04_passive.py  v05_multilevel.py  v06_sensitivity.py  v07_ampute.py  v08_futuremice.py
docs/: citing.md  index.md  install.md  quickstart.md
docs/dev/: ATTRIBUTION.md  BIBLIOGRAPHY.md  PARITY_IMPLEMENTATION_PLAN.md  PARITY_STATUS.md  PUBLICATION.md  REPRODUCIBILITY.md
docs/vignettes/: index.html  index.md  v01_ad_hoc_mice.html  v01_ad_hoc_mice.md  v02_convergence_pooling.html  v02_convergence_pooling.md  v03_missingness.html  v03_missingness.md  v04_passive.html  v04_passive.md  v05_multilevel.html  v05_multilevel.md  v06_sensitivity.html  v06_sensitivity.md  v07_ampute.html  v07_ampute.md  v08_futuremice.html  v08_futuremice.md
reference/: README.md  export_vignette_datasets.sh  extract_vignette_blocks.py  extract_vignette_code.py  extract_vignette_figures.py  extract_vignette_prose.py  parity_manifest.json
reference/01_ad_hoc_and_mice/: golden_outputs.json  vignette_blocks.json  vignette_extracted.R  vignette_prose.json
reference/02_convergence_and_pooling/: golden_outputs.json  vignette_blocks.json  vignette_extracted.R  vignette_prose.json
reference/03_missingness_inspection/: golden_outputs.json  vignette_blocks.json  vignette_extracted.R  vignette_prose.json
reference/04_passive_post_processing/: golden_outputs.json  vignette_blocks.json  vignette_extracted.R  vignette_prose.json
reference/05_multilevel_data/: golden_outputs.json  vignette.html  vignette_blocks.json  vignette_extracted.R  vignette_prose.json
reference/06_sensitivity_analysis/: golden_outputs.json  vignette_blocks.json  vignette_extracted.R  vignette_prose.json
reference/07_ampute/: golden_outputs.json  vignette_blocks.json  vignette_prose.json
reference/08_futuremice/: golden_outputs.json  vignette_blocks.json  vignette_extracted.R  vignette_prose.json
scripts/: calibrate_koppen_priors.py  extract_vignette_prose.py  fetch_reference_r.sh  refresh_v05_goldens.R
src/pymice/: __init__.py  ampute.py  complete.py  continue_mids.py  data_form.py  data_input.py  datasets.py  design.py  engine.py  enums.py  formulas.py  help.py  help_pages.py  imputation_frame.py  imputation_setup.py  initialize.py  mids_construct.py  mids_ops.py  pandas_api.py  parallel.py  passive.py  passive_formula.py  plot_dispatch.py  postprocess.py  quickpred.py  r_api.py  r_compat.py  r_gaps.py  r_prerequisite.py  rng.py  types.py  with_mids.py
tests/: __init__.py  conftest.py  r_support.py  run_r_goldens.sh
tests/data/: ampute_testdata.csv  popNCR.csv  popNCR3.csv  popular.csv
tests/parity/: conftest.py  test_rng_parity.py  test_structural_alignment.py
tests/unit/: test_ampute.py  test_ampute_chain.py  test_audit_code_display.py  test_blocks.py  test_cart.py  test_convergence.py  test_density_bw.py  test_design.py  test_diagnostics_plots.py  test_engine_smoke.py  test_flux.py  test_golden.py  test_help.py  test_jomo_extended.py  test_jomo_full.py  test_jomo_pan.py  test_logreg_polyreg.py  test_md_pattern.py  test_mdc_theme.py  test_methods.py  test_midastouch_polr.py  test_multivariate_pooling.py  test_norm_variants.py  test_optional_backends.py  test_parallel_fidelity.py  test_parity_manifest.py  test_passive.py  test_pool.py  test_postprocess.py  test_pythonic_api.py  test_quickpred.py  test_r_api_phase_ab.py  test_r_api_phase_cd.py  test_r_api_phase_e.py  test_r_gaps_implemented.py  test_r_prerequisite.py  test_remove_lindep_r_parity.py  test_report_inline.py  test_rf.py  test_rng.py  (+10 more)
tests/vignettes/: test_01_nhanes_mean.py  test_02_tier_a_methods.py  test_03_md_pattern.py  test_draw_order_parity_v02_v04.py  test_help_format.py  test_mids_print_format.py  test_summary_format.py  test_v01_draw_order_parity.py  test_v05_chain_parity.py  (+2 more)
(+98 files in other folders)
